refactor: make enum more specific, less abstract